C++-annotations (9.7.1)

  * Added changes of 9.7.0 to the Annotations' `what's new' section

  * Release 9.7.0 was not published as a separate release.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 May 2013 09:43:34 +0200

C++-annotations (9.7.0)

  * Added several new sections about time specification (stl/time, etc.)

  * Added new section about 'this_thread' (stl/thisthread)

  * Added new section about locks (stl/locks)

  * Added new section (classes/ambiguity) about Ambiguity Resolution.

  * Added new section 'system_error' (exception/systemerror)

  * Added new section 'the class `error category'' (exception/errorcategory)

  * Added new section 'the class `error code'' (exception/errorcode)

  * Rewrote all sections about multi-threading)

  * Rewrote the section about lamba expressions

  * Replaced references to `ascii-z string' by `null terminated byte string'
    (NTBS), following the C++11 standard's terminology.

  * Repaired flaws in function names and return tyes of several sto* functions
    in string/convertors.yo 

  * `0b' constants are not mentioned in the C++11 standard (but maybe compiler 
    supported)

  * In section references `C++11, 4.7' the `, 4.7' was dropped

  * intro/main.yo was updated

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 29 May 2013 20:11:20 +0200

C++-annotations (9.6.0)

  * Updated the list of C++ keywords

  * Added advancedtemplates/noexcept.yo covering the noexcept keyword

  * Updated the string chapter

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 10 Jan 2013 20:23:05 +0100

C++-annotations (9.5.0)

  * Updated (to the current C++11 state) the reference of member functions of
    the Abstract Containers. 

  * Added a new section (Allocators) just before introducing the sequential
    containers. 

  * Rephrased sentenses like 'this member <verb>s' to '<verb>s', in particular
    in the chapter on Abstract Containers.

  * Repaired typos, reformulated the section about nested namespaces (Meir