@@ -1,0 +1,22 @@
+To create the kindle version:
+
+    * build programs
+    * build pre
+
+    * kindlegen's archive in ~/xfer
+    * md tmp/kindlegen, extract the archive
+
+    * cd bin 
+    * createhtml
+    * cd html
+    * edit cplusplus.mobi to reflect the latest version, maybe add a new
+        chapter. 
+    
+    * ../tmp/kindlegen/kindlegen -gif cplusplus.opf
+
+    * Follow the instructions at
+        https://kdp.amazon.com/self-publishing/dashboard 
+      for uploading the latest version
+
+    * cd ..
+    * build distclean
