@@ -1,0 +1,30 @@
+Subject: Thanks for the great book
+Date: Tue, 19 Feb 2013 03:26:06 +0900
+
+Hi Frank,
+
+First I want to thank you for the excellent work you've put on the C++
+Annotations (v9.6.0) book. I read it to refresh my knowledge on C++, and I can
+really feel it's a great book, especially for someone who wants to get a
+deeper knowledge on C++.
+
+I'd also like to tell you that I have converted the HTML files into MOBI
+book. I did it so I can read the book on my Kindle apps, and I should tell you
+that the conversion works without much difficulty, with the result looks
+really great on Kindle.
+
+I don't know if you've tried the conversion yourself, but as a token of my
+appreciation for your kindness to share the great book, I'd like to share the
+OPF file I had used to create the MOBI version. If you find the idea for MOBI
+conversion is good, please feel free to use (and reuse) the file. (It's just
+an XML file containing the metadata for the book, which you can inspect and
+edit for yourself.) To create the MOBI book, you just have to put it on the
+same directory as all the HTML files, and feed the OPF file to KindleGen tool
+(which is freely available from Amazon). Also, if you wish I could provide you
+with the MOBI file.
+
+Thank you, and please keep up the good work.
+
+Best regards,
+
+Sator Proton
