@@ -1,0 +1,70 @@
+<?xml version="1.0" encoding="utf-8"?>
+<package unique-identifier="uid">
+    <metadata>
+        <dc-metadata xmlns:dc="http://purl.org/metadata/dublin_core" xmlns:oebpackage="http://openebook.org/namespaces/oeb-package/1.0/">
+            <dc:Title>C++ Annotations Version 9.7.2</dc:Title>
+            <dc:Language>en-us</dc:Language>
+            <dc:Identifier id="uid">EA989A949A</dc:Identifier>
+        <dc:Creator>Frank B. Brokken</dc:Creator><dc:Publisher>The University of Groningen</dc:Publisher><dc:Identifier scheme="ISBN">9036704707</dc:Identifier><dc:Subject BASICCode="COM000000">Computing, Internet</dc:Subject><dc:Date>01/10/2013</dc:Date></dc-metadata>
+        <x-metadata>
+            <output encoding="Windows-1252"/>
+            <EmbeddedCover>annotations.gif</EmbeddedCover>
+        </x-metadata>
+    </metadata>
+    <manifest>
+        <item id="item1" media-type="text/x-oeb1-document" href="cplusplus.html"/>
+        <item id="item2" media-type="text/x-oeb1-document" href="cplusplus01.html"/>
+        <item id="item3" media-type="text/x-oeb1-document" href="cplusplus02.html"/>
+        <item id="item4" media-type="text/x-oeb1-document" href="cplusplus03.html"/>
+        <item id="item5" media-type="text/x-oeb1-document" href="cplusplus04.html"/>
+        <item id="item6" media-type="text/x-oeb1-document" href="cplusplus05.html"/>
+        <item id="item7" media-type="text/x-oeb1-document" href="cplusplus06.html"/>
+        <item id="item8" media-type="text/x-oeb1-document" href="cplusplus07.html"/>
+        <item id="item9" media-type="text/x-oeb1-document" href="cplusplus08.html"/>
+        <item id="item10" media-type="text/x-oeb1-document" href="cplusplus09.html"/>
+        <item id="item11" media-type="text/x-oeb1-document" href="cplusplus10.html"/>
+        <item id="item12" media-type="text/x-oeb1-document" href="cplusplus11.html"/>
+        <item id="item13" media-type="text/x-oeb1-document" href="cplusplus12.html"/>
+        <item id="item14" media-type="text/x-oeb1-document" href="cplusplus13.html"/>
+        <item id="item15" media-type="text/x-oeb1-document" href="cplusplus14.html"/>
+        <item id="item16" media-type="text/x-oeb1-document" href="cplusplus15.html"/>
+        <item id="item17" media-type="text/x-oeb1-document" href="cplusplus16.html"/>
+        <item id="item18" media-type="text/x-oeb1-document" href="cplusplus17.html"/>
+        <item id="item19" media-type="text/x-oeb1-document" href="cplusplus18.html"/>
+        <item id="item20" media-type="text/x-oeb1-document" href="cplusplus19.html"/>
+        <item id="item21" media-type="text/x-oeb1-document" href="cplusplus20.html"/>
+        <item id="item22" media-type="text/x-oeb1-document" href="cplusplus21.html"/>
+        <item id="item23" media-type="text/x-oeb1-document" href="cplusplus22.html"/>
+        <item id="item24" media-type="text/x-oeb1-document" href="cplusplus23.html"/>
+        <item id="item25" media-type="text/x-oeb1-document" href="cppindex.html"/>
+    </manifest>
+    <spine>
+        <itemref idref="item1"/>
+        <itemref idref="item2"/>
+        <itemref idref="item3"/>
+        <itemref idref="item4"/>
+        <itemref idref="item5"/>
+        <itemref idref="item6"/>
+        <itemref idref="item7"/>
+        <itemref idref="item8"/>
+        <itemref idref="item9"/>
+        <itemref idref="item10"/>
+        <itemref idref="item11"/>
+        <itemref idref="item12"/>
+        <itemref idref="item13"/>
+        <itemref idref="item14"/>
+        <itemref idref="item15"/>
+        <itemref idref="item16"/>
+        <itemref idref="item17"/>
+        <itemref idref="item18"/>
+        <itemref idref="item19"/>
+        <itemref idref="item20"/>
+        <itemref idref="item21"/>
+        <itemref idref="item22"/>
+        <itemref idref="item23"/>
+        <itemref idref="item24"/>
+        <itemref idref="item25"/>
+    </spine>
+    <tours/>
+    <guide/>
+</package>
