@@ -16,7 +16,7 @@ are available in postscript, i(pdf) and other formats in
         )
     in files having names starting with tt(cplusplus) (A4 paper size). Files
 having names starting with `cplusplusus' are intended for the US em(legal)
-paper size.
+paper size. The annotations() are also available as a Kindle book.
 
     The latest version of the bf(C++) Annotations in html-format can be
 browsed at:
