@@ -24,9 +24,9 @@ call that function.  These two functions could be defined as follows:
     std::ostream &Person::insertInto(std::ostream &out)
     {
         return
-            cout << "Name:    " << d_name << ", "
-                    "Address: " << d_address << ", "
-                    "Phone:   " << d_phone;
+            out << "Name:    " << d_name << ", "
+                   "Address: " << d_address << ", "
+                   "Phone:   " << d_phone;
     }
         )
     As tt(insertInto) is a member function it has direct access to the
