@@ -22,7 +22,7 @@ with that class  tt(Person):
         return *this;
     }
         )
-    As noted previously (section(MOVECONS)) declaring a move assignment
+    As noted previously (section ref(MOVECONS)) declaring a move assignment
 operator suppresses the default availability of the copy constructor. It is
 made available again by declaring the copy constructor in the class's
 interface (and of course by providing an explicit implementation or by using
