@@ -1,2 +1,2 @@
-SUBST(DOCVERSION)(9.7.1)
+SUBST(DOCVERSION)(9.7.2)
 SUBST(YEARS)(1994 - 2013)
