@@ -1,3 +1,12 @@
+C++-annotations (9.7.2)
+
+  * Repaired some minor flaws, which were still waiting to be processed.
+
+  * Added for internal use steps to create a Kindle version of the Annotations
+    (see also http://www.amazon.com, look for ('c++ annotations')
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 May 2013 12:45:58 +0200
+
 C++-annotations (9.7.1)
 
   * Added changes of 9.7.0 to the Annotations' `what's new' section
